[package]
name = "warp-demo-services"
version = "0.1.0"
authors = ["Flo <florent.ulve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "warpdemo"
path = "src/lib.rs"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
warp = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10.1"
diesel = { version = "1.0.0", features = ["postgres", "uuidv07", "r2d2"] }
dotenv = "0.9.0"
uuid = {version = "0.7", features = ["serde"] }